# agent_memory

./: .gitignore  DESIGN.md  PROTOCOL.md  README.md  REQUIREMENTS.md  pyproject.toml
.github/workflows/: ci.yml
agent_memory/: __init__.py  __main__.py  cli.py  config.py  errors.py  events.py  expiry.py  extract_rules.py  frontmatter.py  index.py  intent_draft.py  io_atomic.py  pending_turn.py  project_detect.py  recent.py  resolve.py  security.py  templates.py  util.py  work_items.py  working.py  write_gate.py
agent_memory/commands/: checkpoint.py  context_cmd.py  doctor.py  event_cmd.py  extract.py  forget.py  gc.py  get_cmd.py  handoff_cmd.py  init.py  project_detect_cmd.py  promote.py  recent_cmd.py  reindex.py  reject.py  remember.py  search_cmd.py  session_end.py  turn_cmd.py  work_cmd.py
docs/: REFERENCE_INTEGRATION.md  RELEASE_v2.0.1.md  RELEASE_v2.0.2.md  RELEASE_v2.0.3.md  RELEASE_v2.0.4.md  RELEASE_v2.0.md  SIGNOFF.md  使用手册.md  四问题解决路径.md  接入指南.md
docs/demo/: AC1_script.md
scripts/: demo_ac1.sh  install_codex_hooks.sh  uninstall_codex_hooks.sh
scripts/codex-hooks/: README.md  _common.sh  agent_rules_v2.md  session_start.sh  stop_turn.sh  user_prompt_maybe_search.sh
tests/: test_ac_11_index_atomic.py  test_ac_8_security.py  test_ac_signoff.py  test_cli_agent_ux.py  test_event_v201.py  test_index.py  test_init.py  test_pr4_memory_ops.py  test_pr5_working.py  test_pr6_project.py  test_pr7_lifecycle.py  test_pr8_context.py  test_pr9_docs.py  test_project_scope_v204.py  test_session_v203.py  test_stop_hook_v2.py  test_turn_v2.py  test_work_v202.py
tests/fixtures/secrets/: ac8_fixture.txt  pem_sample.txt
