[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory"
version = "2.0.1"
description = "Pure-file personal agent memory system (v2.0.1 L0 events + intent draft)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
agent-memory = "agent_memory.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_memory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
